Change /about page.

--- a/source/room_stats/templates/room_stats/about.html
+++ b/source/room_stats/templates/room_stats/about.html
@@ -8,5 +8,19 @@
     <h1>About</h1>
 
     {% include 'room_stats/widgets/work_in_progress.html' %}
+    <br />
+    <br />
+
+    Some quick notes:
+    <ul>
+      <li>The huge amount of rooms is not categorized yet, interface for category changes/proposals will come soon</li>
+      <li>Mobile interface is broken right now, should be fixed in the later releases</li>
+      <li>Room list items are too big right now. I'm searching a way to greatly reduce them.</li>
+      <li>Community room promotions would be free ofc.</li>
+      <li>Ratings page should be redesigned later.</li>
+      <li>Room members graph is showing only last month statistics right now. It should be improved.</li>
+    </ul>
+
+    This is an unofficial project. All the data are obtained from the public API.
 
 {% endblock %}
