--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -94,11 +94,9 @@ nav a:hover {
 
 .room-container {
   display: flex;
-  max-width: 750px;
-  height: 160px;
+  width: 550px;
   text-decoration: none;
-  padding: 10px;
-  margin: 10px auto;
+  margin: 5px auto;
   color: black;
   border: 1px #ddd solid;
   box-shadow: 0 0 5px #eee;
@@ -106,11 +104,18 @@ nav a:hover {
   color: #111;
 }
 
+
+.room-container:hover .room-side-container .room-description {
+  max-height: 200px;
+  transition: max-height 1s ease;
+  transition-delay: 0.2s;
+}
+
 .room-logo {
-  height: 100px;
-  width: 100px;
+  height: 75px;
+  width: 75px;
   align-self: center;
-  padding: 0px 20px;
+  padding: 0px 5px;
 }
 
 .room-logo > img {
@@ -122,21 +127,28 @@ nav a:hover {
   display: flex;
   flex: 1;
   flex-wrap: wrap;
-  margin-left: 10px;
+  border-left: 1px #eee solid;
+  padding: 5px 0 5px 10px;
 }
 
 .room-header {
-  font-size: 26px;
+  font-size: 18px;
   font-weight: bold;
   flex: 1 1 100%;
+  max-height: 18px;
+  overflow: hidden;
+  margin-bottom: 5px;
 }
 
 .room-description {
   flex: 1 1 100%;
-  font-size: 14px;
-  max-height: 95px;
-  overflow: auto;
-  /* font-size: 0.8em; */
+  font-size: 12px;
+  min-height: 54px;
+  max-height: 54px;
+  overflow: hidden;
+  max-width: 80%;
+
+  transition: max-height 1s ease;
 }
 
 .room-description > p {
@@ -145,11 +157,10 @@ nav a:hover {
 }
 
 .room-details {
+  display: flex;
   flex: 1 1 100%;
   align-self: flex-end;
-  display: flex;
   margin: 5px 10px 0px 0px;
-  /* border-top: 1px #ddd solid; */
 }
 
 .room-members {
