--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -112,8 +112,10 @@ nav a:hover {
 }
 
 .room-logo {
-  height: 75px;
-  width: 75px;
+  min-height: 75px;
+  min-width: 75px;
+  max-height: 75px;
+  max-width: 75px;
   align-self: center;
   padding: 0px 5px;
 }
