--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -114,8 +114,8 @@ nav a:hover {
 .room-logo {
   min-height: 75px;
   min-width: 75px;
-  max-height: 75px;
-  max-width: 75px;
+  height: 75px;
+  width: 75px;
   align-self: center;
   padding: 0px 5px;
 }
