Add styles for room-list header.

--- a/source/room_stats/templates/room_stats/rooms_list.html
+++ b/source/room_stats/templates/room_stats/rooms_list.html
@@ -8,7 +8,7 @@
 {% block content %}
 
   {% if header %}
-    <h1>{{ header }}</h1>
+    <h1 class="rooms-header">{{ header }}</h1>
   {% endif %}
 
   <div itemscope itemtype="https://schema.org/BreadcrumbList">
