--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -92,6 +92,17 @@ nav a:hover {
  *
  */
 
+.rooms-header {
+  margin: 0 auto;
+  max-width: 550px;
+  display: block;
+  text-align: center;
+  color: #444;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  font-size: 24px;
+}
+
 .room-container {
   display: flex;
   max-width: 550px;
