--- a/source/room_stats/templates/room_stats/about.html
+++ b/source/room_stats/templates/room_stats/about.html
@@ -14,8 +14,8 @@
     Some quick notes:
     <ul>
       <li>The huge amount of rooms is not categorized yet, interface for category changes/proposals will come soon</li>
-      <li>Mobile interface is broken right now, should be fixed in the later releases</li>
-      <li>Room list items are too big right now. I'm searching a way to greatly reduce them.</li>
+      <li style="text-decoration: line-through;">Mobile interface is broken right now, should be fixed in the later releases</li>
+      <li style="text-decoration: line-through;">Room list items are too big right now. I'm searching a way to greatly reduce them.</li>
       <li>Community room promotions would be free ofc.</li>
       <li>Ratings page should be redesigned later.</li>
       <li>Room members graph is showing only last month statistics right now. It should be improved.</li>
