--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -15,9 +15,14 @@ a:focus {
   outline: none;
 }
 
+h1 {
+  font-size: 26px;
+}
+
 h1 > a {
   text-decoration: none;
   color: black;
+  font-size: 24px;
 }
 
 .content-container {
@@ -29,7 +34,6 @@ h1 > a {
 }
 
 .pagination {
-  /* display: inline-block; */
   display: table;
   margin: 20px auto;
 }
