Add hover support for index page widgets.

--- a/source/room_stats/static/css/scroll_widget.css
+++ b/source/room_stats/static/css/scroll_widget.css
@@ -9,6 +9,11 @@
 	overflow: hidden;
 
 	margin: 0 auto;
+  transition: height 1s ease;
+}
+
+.scroll-viewport:hover {
+  height: 240px;
 }
 
 .scroll-wrapper {
@@ -60,7 +65,6 @@
   text-decoration: none;
   color: inherit;
 }
-
 
 .room-widget-top {
   display: flex;
