Fix hover condition for room widget.

--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -120,7 +120,7 @@ nav a:hover {
 }
 
 
-.room-description:hover {
+.room-container:hover .room-description {
   max-height: 200px;
   transition: max-height 1s ease;
 }
