--- a/source/room_stats/templates/room_stats/base.html
+++ b/source/room_stats/templates/room_stats/base.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href='{% static "css/main.css" %}'>
 
+    <script src="{% static 'vendor/jquery-3.3.1.min.js' %}"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-103796347-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
