--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -461,6 +461,98 @@ a.tag-cloud:hover {
 
 /*
  *
+ * Modal
+ *
+ */
+.modal {
+  display: none;
+  position: fixed;
+  /* z-index: 1; */
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-window {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 0;
+  max-width: 500px;
+}
+
+.modal-window textarea {
+  display: block;
+  width: 80%;
+  height: 120px;
+  margin: 10px auto;
+}
+
+.modal-header {
+  color: #fff;
+  background-color: #444;
+  width: 100%;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  padding: 15px 0;
+}
+
+.modal-content {
+  width: 460px;
+  margin: 15px auto;
+  padding-bottom: 15px;
+}
+
+.modal .caption {
+  font-size: 0.8em;
+  color: #333;
+  /* font-style: italic; */
+  display: block;
+}
+
+.modal .success {
+  padding: 15px 0;
+  text-align: center;
+  width: 100%;
+  color: #333;
+}
+
+.modal .error {
+  padding: 15px 0;
+  text-align: center;
+  width: 100%;
+  color: #8b0000;
+}
+
+.caption + * {
+  margin-top: 10px;
+}
+
+.modal button {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: #444;
+  background-color: #fff;
+  border: 1px #444 solid;
+  margin: 0 auto;
+  cursor: pointer;
+  width: 150px;
+}
+
+.modal button:hover {
+  color: #fff;
+  background-color: #444;
+  border: 1px #444 solid;
+
+}
+
+/*
+ *
  * Utils
  *
  */
@@ -487,3 +579,25 @@ a.tag-cloud:hover {
 	color: rgba(255,255,255,0);
 
 }
+
+.ureset-button {
+  display: block;
+  margin: 0 auto;
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  overflow: visible;
+  background: transparent;
+  color: inherit;
+  font: inherit;
+  line-height: normal;
+  -webkit-font-smoothing: inherit;
+  -moz-osx-font-smoothing: inherit;
+  -webkit-appearance: none;
+}
+
+.grecaptcha-badge {
+  display: none;
+}
+
