Make captcha error silent for some devices.

--- a/source/room_stats/templates/room_stats/widgets/modal_promote_room.html
+++ b/source/room_stats/templates/room_stats/widgets/modal_promote_room.html
@@ -12,7 +12,7 @@
       <span class="caption">You can add an additional room description in the field below. This will make the room more noticeable. Please, note that premoderation will required in this case. We need to ensure there're no bad things included.</span>
       <textarea name="description"></textarea>
 
-      <button class="g-recaptcha ureset-button" data-badge="inline" data-theme="dark" data-sitekey="6LegaE4UAAAAAL74MnoU4CR9xRTNsKfeMu1z3BxT" data-callback="reSubmit">Promote</button>
+      <button class="g-recaptcha ureset-button" data-badge="inline" data-theme="dark" data-sitekey="6LegaE4UAAAAAL74MnoU4CR9xRTNsKfeMu1z3BxT" data-callback="reSubmit" data-error-callback="function(){}">Promote</button>
       </form>
     </div>
   </div>
