Expand /about section. Fix REAME.

--- a/source/room_stats/templates/room_stats/about.html
+++ b/source/room_stats/templates/room_stats/about.html
@@ -6,12 +6,14 @@
 
 {% block content %}
     <h1>About</h1>
+    Our goals is to provide the best user experience for exploring the Matrix ecosystem. We belive that Matrix protocol is the best option for instant messanging and it would become a standard in the future. However, by the end of summer 2017 there wasn't a lot of public catalogs presented, so matrixstats.org was started. We aim to make rooms more searchable and descriptive, so the users can explore thousands of rooms and become a part of the network shortly. Please, feel free to describe your experience or propose some features you may find interesting.
 
-    {% include 'room_stats/widgets/work_in_progress.html' %}
-    <br />
-    <br />
+    <!-- <h2>How to promote a room?</h2>
+         We can help to promote the room and spread the word about it. The room will be placed to community catalog and become visible on the main page periodically.
 
-    Some quick notes:
+         Depending on the room size, it would be placed to either small (5-50) or medium (50-500) catalog. We promote small rooms for 7 days and medium for 14 days. You can refresh the promotion any time after the expiration.
+    -->
+    <h2>Some quick notes:</h2>
     <ul>
       <li>The huge amount of rooms is not categorized yet, interface for category changes/proposals will come soon</li>
       <li style="text-decoration: line-through;">Mobile interface is broken right now, should be fixed in the later releases</li>
@@ -19,6 +21,18 @@
       <li>Community room promotions would be free ofc.</li>
       <li>Ratings page should be redesigned later.</li>
       <li>Room members graph is showing only last month statistics right now. It should be improved.</li>
+    </ul>
+
+    <h2>Related projects</h2>
+    This section is under development. Please, feel free to add your project there.
+
+    <h2>Contacts</h2>
+    If you want to share some thoughts or ideas, please, consider the following contacts:
+    <ul>
+      <li><a href="https://riot.im/app/#/room/#matrixstats:matrix.org">#matrixstats:matrix.org</a> - for general matrixstats talks and proposals</li>
+      <li><a href="https://github.com/a13xmt/matrixstats.org/issues">github issues</a> - for user experience stuff and interface improvements</li>
+      <li><a href="mailto:alexandr.motchany@gmail.com">drop me an email</a> - for any additional issues or ideas</li>
+      <li>you can check my website <a href="https://alexandr.motchany.com">there</a></li>
     </ul>
 
     This is an unofficial project. All the data are obtained from the public API.
