Fix /about page.

--- a/source/room_stats/templates/room_stats/about.html
+++ b/source/room_stats/templates/room_stats/about.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1>About</h1>
-    The project goals are to provide the best user experience for exploring the Matrix ecosystem. We belive that Matrix protocol is the best option for instant messanging and it would become a standard in the future. However, by the end of summer 2017 there wasn't a lot of public catalogs presented, so matrixstats.org was started. We aim to make rooms more searchable and descriptive, so the users can explore thousands of rooms and become a part of the network shortly. Please, feel free to describe your experience or propose some features you may find interesting.
+    The project goal is to provide the best user experience for exploring the Matrix ecosystem. We belive that Matrix protocol is the best option for instant messanging and it would become a standard in the future. However, by the end of summer 2017 there wasn't a lot of public catalogs presented, so matrixstats.org was started. We aim to make rooms more searchable and descriptive, so the users can explore thousands of rooms and become a part of the network shortly. Please, feel free to describe your experience or propose some features you may find interesting.
 
     <!-- <h2>How to promote a room?</h2>
          We can help to promote the room and spread the word about it. The room will be placed to community catalog and become visible on the main page periodically.
