Improve admin categories widget.

--- a/source/room_stats/templates/admin/widgets/categories_widget.html
+++ b/source/room_stats/templates/admin/widgets/categories_widget.html
@@ -1,4 +1,4 @@
-<select id="{{ room.id }}" class="multiselect" multiple="multiple">
+<select id="{{ room.id }}" class="categories-multiselect" multiple="multiple">
   {% for category in categories %}
   <option value="{{ category.id}}" {% if category in room.categories.all %}selected{% endif %}>{{ category.name }}</option>
   {% endfor %}
