--- a/source/room_stats/templates/room_stats/room_details.html
+++ b/source/room_stats/templates/room_stats/room_details.html
@@ -15,11 +15,7 @@
 <div class="room-details-container" itemscope itemtype="https://schema.org/Conversation">
 
   <div class="room-details-logo">
-    {% if room.avatar_url %}
-      <img src="https://matrix.org/_matrix/media/r0/thumbnail/{{ room.avatar_url | slice:'6:' }}?width=128&height=128" itemprop="image" />
-    {% else %}
-      <img src="{% static 'img/no-logo.png' %}" title="No active logo yet" />
-    {% endif %}
+    <img src="{{ room.get_logo_url }}" itemprop="image" />
   </div>
 
   <div class="room-details-main">
