Add conditional admin interface to room details page.

--- a/source/room_stats/templates/room_stats/room_details.html
+++ b/source/room_stats/templates/room_stats/room_details.html
@@ -4,6 +4,11 @@
 
 {% block additional_imports %}
   <script src='https://www.google.com/recaptcha/api.js'></script>
+
+  {% if admin %}
+    {% include 'admin/imports.html' %}
+  {% endif %}
+
 {% endblock %}
 
 {% block title %}
@@ -76,6 +81,12 @@
 
 
 </div>
+
+  {% if admin %}
+    <div style="margin-left: 20px;">
+      {% include 'admin/widgets/categories_widget.html' %}
+    </div>
+  {% endif %}
 
   <div class="room-graph">
     <canvas id="dailyVisitorsChart" ></canvas>
