Fix broken link on index page.

--- a/source/room_stats/templates/room_stats/index.html
+++ b/source/room_stats/templates/room_stats/index.html
@@ -14,7 +14,7 @@
 {% block content %}
     <h1>Welcome to Matrix Stats</h1>
     <div class="text">
-      Welcome to Matrix Stats - the first public catalog for <a href="https://matrix.org">matrix</a> rooms. There you can find a lot of rooms grouped by <a href="{% url 'ratings' %}">ratings</a> or <a href="{% url 'categories' %}">categories</a>. If you have a room, you can <a href="{% url 'promote' %}">promote</a> it as well. Feel free to explore new things.
+      Welcome to Matrix Stats - the first public catalog for <a href="https://matrix.org">matrix</a> rooms. There you can find a lot of rooms grouped by <a href="{% url 'ratings' %}">ratings</a> or <a href="{% url 'categories' %}">categories</a>. If you have a room, you can promote it as well. Feel free to explore new things.
     </div>
 
     <h1><a href="{% url 'ratings' %}">Ratings</a></h1>
