--- a/source/room_stats/templates/room_stats/widgets/modal_promote_room.html
+++ b/source/room_stats/templates/room_stats/widgets/modal_promote_room.html
@@ -9,7 +9,7 @@
 
       <span class="caption">Depending on the room size, it would be placed to either small (5-50) or medium (50-500) catalog. We promote small rooms for 7 days and medium for 14 days. You can refresh the promotion any time after the expiration.</span>
 
-      <span class="caption">You can add an additional room description in the field below. This will make the room more noticeable. Please, note that premoderation will required in this case. We need to ensure there're no bad things included.</span>
+      <span class="caption">You can add an additional room description in the field below. This will make the room more noticeable. Please, note that premoderation will required in this case.</span>
       <textarea name="description"></textarea>
 
       <button class="g-recaptcha ureset-button" data-badge="inline" data-theme="dark" data-sitekey="6LegaE4UAAAAAL74MnoU4CR9xRTNsKfeMu1z3BxT" data-callback="reSubmit" data-error-callback="function(){}">Promote</button>
